--- a/generator/default.properties
+++ b/generator/default.properties
@@ -16,7 +16,7 @@
 #
 # -------------------------------------------------------------------
 
-propel.version = 1.7.1
+propel.version = 1.7.2-dev
 
 propel.home = .
 
